*******************************************************************************
Version 1.6.7
*******************************************************************************

2010-09-10 Warwick Harvey <warwick.harvey(at)tieto.com>
	Patch to take notice of UPNP_USE_RWLOCK flag

	The configure.ac file included with UPnP checks for the presence of the
	pthread_rwlock_t type, and then sets the value of the UPNP_USE_RWLOCK
	flag appropriately.  However, this flag is not referenced at all in the
	source code, and thus the code does not compile on systems that don't
	have the pthread_rwlock_t type (such as Android).
	
	Please find attached a patch (against the current 1.6.x head) that checks
	the value of this flag and falls back on using mutexes if read-write
	locks are not available.

2010-09-10 Jean Sigwald <jean.sigwald(at)orange-ftgroup.com>
	I discovered a reliable denial-of-service issue on the last stable
	release of libupnp (1.6.6) remotely triggerable by any
	unauthenticated user. The issue is related with a bad parsing of
	malformed XML.

2010-09-10 Chandra Penke <chandrapenke(at)mcntech.com>
	* SF Patch Tracker [ 2854711 ] Patch for Solaris10 compilation and usage
	Submitted By: zephyrus ( zephyrus00jp )
	
	Patch for Solaris10 compilation and usage.

2010-09-10 Chandra Penke <chandrapenke(at)mcntech.com>
	Add support for conditionally enabling ipv6.

2010-09-09 Chandra Penke <chandrapenke(at)mcntech.com>
	Fix for regression in SSDP code to send/receive messages over UDP

	Sending messages over UDP is broken in some Apple OSes
	such as OS X and iOS. This might be broken in other OSes to but didn't
	verify.

	The fix is to modify the socket lenght argument of sendto to use the correct
	sockaddr lenght dependng on whether the socket is IPV4 or IPV6.

	Also added some error checks and debugging related to the issue

2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	Using UpnpReadHttpGet to download large files causes the application to